# DesignPatterns

./: CMakeLists.txt  README.md  setup.sh
lab-2-erobey93-main/: .gitignore
src/: .lab2.cpp.swp  config.h  enemy.h  enemyFactory.h  entity.h  fastEnemy.h  lab2.cpp  ship.h  slowEnemy.h  world.h
